made changes to the tsconfig file to fix asset loading issues, started sketching out the overall composition of the website layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       "webpack-env"
     ],
     "paths": {
+      "external-assets": [
+        "public/*"
+      ],
       "@/*": [
         "src/*"
       ]
