--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babylonjs/loaders": "^4.2.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -30,7 +31,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
