--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babylonjs/loaders": "^4.2.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.3.1",
     "register-service-worker": "^1.7.1",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
