--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.1",
     "register-service-worker": "^1.7.1",
+    "rxjs": "^6.6.6",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
