--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rxjs": "^6.6.6",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0"
