--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babylonjs/loaders": "^4.2.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.1",
     "register-service-worker": "^1.7.1",
